<resources>
    <string name="app_name">Android_Note</string>
    <string name="action_settings">Settings</string>
    <string name="textField">Text:</string>
    <string name="dateField">Date:</string>
    <string name="iconField">Icon:</string>
    <string name="interText">Inter text</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="icon">Icon</string>
    <string name="addImage">Add image</string>
    <string name="deleteImage">Delete image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="deleteAll">Delete All</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
</resources>
