<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"

    tools:context="example.com.android_note.EditorActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarEditorActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:paddingLeft="8dp"
                app:srcCompat="@mipmap/icon_foreground" />

            <TextView
                android:id="@+id/titleEditorActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingTop="8dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="56dp"
            android:text="@string/textField"
            android:focusableInTouchMode="false"
            android:isScrollContainer="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Cancel"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Save"
            android:layout_alignBottom="@+id/Save"
            android:layout_alignParentRight="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="108dp"
            android:layout_weight="1.64"
            android:onClick="CancelClick"
            android:text="@string/cancel"
            android:focusableInTouchMode="false"
            android:isScrollContainer="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.798"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/DeleteImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="56dp"
            android:layout_toLeftOf="@+id/imageView1"
            android:layout_weight="1"
            android:onClick="DeleteImageClick"
            android:text="@string/deleteImage"
            android:focusableInTouchMode="false"
            android:isScrollContainer="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="88dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="72dp"
            android:layout_marginBottom="16dp"
            android:scaleType="fitXY"
            android:focusableInTouchMode="false"
            android:isScrollContainer="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.957"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/AddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/DeleteImage"
            android:layout_alignRight="@+id/DeleteImage"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.23"
            android:onClick="AddImageClick"
            android:text="@string/addImage"
            android:focusableInTouchMode="false"
            android:isScrollContainer="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/AddImage"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="108dp"
            android:onClick="SaveClick"
            android:text="@string/save"
            android:focusableInTouchMode="false"
            android:isScrollContainer="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="84dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusableInTouchMode="false"
            android:isScrollContainer="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/NoteText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/interText"
                    android:isScrollContainer="false"/>
            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>
